instructions for CSC pipeline and imrpovements in plot labels

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "\n",
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br) <br>\n",
-    "Last verified run: **2024-Dec-27**"
+    "Last verified run: **2025-Jan-03**"
    ]
   },
   {
@@ -30,7 +30,7 @@
     "\n",
     "* [The PZ Server website](#the-pz-server-website)\n",
     "* [The pzserver Python library](#the-pzserver-python-library) \n",
-    "* [Data product types](#data-product-types)\n",
+    "* [Data product types](#data-products)\n",
     "    * [Spec-z Catalog](#spec-z-catalog)\n",
     "    * [Training Set](#training-set)\n",
     "    * [Training Results](#training-results)\n",
@@ -145,7 +145,7 @@
    },
    "source": [
     "--- \n",
-    "OBS: Depending on your Jupyter Lab version, you might need to restart the kernel to incorporate the new library. "
+    "OBS: Depending on your Jupyter Notebook/Lab version, you might need to restart the kernel to incorporate the new library. "
    ]
   },
   {
@@ -173,14 +173,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The connection with the PZ Server is made by an object of the class `PzServer`. To get authorization to define an instance of `PzServer`, the users must provide an **API Token** generated on the top right menu on the [PZ Server website](https://pz-server.linea.org.br/) . "
+    "A class `PzServer` object connects with the PZ Server back-end. To get authorization to define an instance of `PzServer`, users must provide an API Token generated in the menu at the top right corner of the [PZ Server website](https://pz-server.linea.org.br/). "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/ScreenShotTokenMenu.png\" width=150pt align=\"top\"/> <img src=\"images/ScreenShotTokenGenerator.png\" width=350pt />"
+    "<img src=\"images/ScreenShotTokenMenu.png\" width=150pt align=\"top\"/> <img src=\"images/ScreenShotTokenGenerator.png\" width=350pt />\n",
+    "\n",
+    "Uncomment the next cell and paste the API Token, replacing the placeholder below: "
    ]
   },
   {
@@ -196,7 +198,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For convenience, the token can be saved in a text file, e.g., **token.txt** (which is already listed in the .gitignore file in this repository). "
+    "For convenience, the API token can be saved in a text file, e.g., **token.txt** (already listed in the .gitignore file in this repository). \n",
+    "\n",
+    "API tokens can be reused indefinitely. However, an old token automatically expires whenever you create a new one. \n",
+    "\n",
+    "<font color=red> DISCLAIMER: API tokens MUST NOT BE SHARED! Users are responsible for keeping their tokens private. </font> "
    ]
   },
   {
@@ -278,7 +284,7 @@
    "source": [
     "and display all available data products. \n",
     "\n",
-    "<font color='red'>WARNING: This list can rapidly grow during the survey's operation (cell output scrolling recommended)</a>"
+    "<font color='green'>WARNING: This list can rapidly grow during the survey's operation (cell output scrolling recommended)</a>"
    ]
   },
   {
@@ -488,7 +494,7 @@
     "\n",
     "https://pz-server-dev.linea.org.br/product/ + **internal_name**\n",
     "\n",
-    "<font color=red> WARNING:</font> The URL works only with the **complete internal name**, not with just the **id** number. \n",
+    "<font color=green> WARNING: The URL works only with the **complete internal name**, not with just the **id** number. </font>\n",
     "\n",
     "\n",
     "For example:"
@@ -707,7 +713,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gama.data.plot(x=\"RA (degrees)\", y=\"DEC (degrees)\", kind=\"scatter\")  "
+    "gama.data.plot(x=\"RA\", y=\"DEC\", kind=\"scatter\")  \n",
+    "plt.xlabel(\"R.A. (degrees)\")\n",
+    "plt.ylabel(\"Dec. (degrees)\")"
    ]
   },
   {
@@ -716,7 +724,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gama.data.hist('Z')"
+    "gama.data.hist('Z')\n",
+    "plt.xlabel(\"spec-z\")\n",
+    "plt.ylabel(\"counts\")\n",
+    "plt.title(None)"
    ]
   },
   {
@@ -834,7 +845,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.download_product(\"197_goldenspike_flexzboost\", save_in=\".\") "
+    "pz_server.download_product('197_goldenspike_flexzboost', save_in='.') "
    ]
   },
   {
@@ -869,7 +880,6 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
     "## PZ Server Pipelines \n",
     "\n",
     "In addition to PZ-related data hosting and curation services, PZ Server also provides tools to help users prepare training data for PZ algorithms. The pipeline *Training Set Maker* uses the data partitioning method [HATS](https://hats.readthedocs.io/en/stable/) and the Python framework [LSDB](https://docs.lsdb.io/en/stable/) (both developed by [LINCC](https://lsstdiscoveryalliance.org/programs/lincc/)) as cross-matching back-end engine, coupled with a user interface on the PZ Server website plugged to the IDAC-Brazil's high-performance computing infrastructure. With *Training Set Maker*, users can create training sets by matching objects from one given spec-z catalog available in the server with objects from an LSST Object catalog. In a previous step, the spec-z catalog might have been prepared as a combination of spectroscopic redshift measurements from different sources grouped into a single catalog with the pipeline *Combine Spec-z Catalogs*. \n",
@@ -883,22 +893,22 @@
    "source": [
     "### Combine Spec-z Catalogs \n",
     "\n",
-    "The pipeline *Combine Spec-z Catalogs* (CSC) simply concatenates multiple spec-z catalogs into a single table and registers it as a new data product on the PZ Server. On the PZ Server website, go to **PZ Server Pipelines** > **Combine Spec-z Catalogs**, fill in the submission form with relevant metadata, such as the name for the new spec-z catalog to be created and a short description, select the catalogs to include by marking the checkboxes and press the **Run** button. \n",
+    "The pipeline Combine Spec-z Catalogs (CSC) simply concatenates multiple Spec-z catalogs into a single table and registers it as a new data product on the PZ Server. It was designed to help aggregate multiple samples from individual surveys into a single catalog before they are associated with LSST data through spatial cross-matching. \n",
     "\n",
+    "On the PZ Server website, go to **PZ Server Pipelines** > **Combine Spec-z Catalogs**, fill in the submission form with relevant metadata, such as the name for the new spec-z catalog to be created and a short description, select the catalogs to include by marking at least two checkboxes, and press the **Run** button. \n",
     "\n",
+    "<font color=red>TO DO: UPDATE SCREENSHOT HERE</font>\n",
     "\n",
-    "\n",
-    "<font color=red> SCREENSHOT HERE</font>\n",
-    "\n",
-    "\n",
-    "\n"
+    "<img src=\"./images/ScreenshotCSC.png\" align=\"top\"/> \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, the pipeline can be submitted using the method `pz_server.combine_specz_catalogs`. Provide a name (string) for the new spec-z catalog to create a \"csc\" object instance.  "
+    "Alternatively, the pipeline can be submitted using the method `pz_server.combine_specz_catalogs` from the `pzserver` library. \n",
+    "\n",
+    "Start creating a \"csc\" process object instance by providing a name (string) for the new spec-z catalog to the method."
    ]
   },
   {
@@ -907,14 +917,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#csc = pz_server.combine_specz_catalogs(\"csc example\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then, add the individual spec-z catalogs to be included in the sample using the `append_catalog` method. "
+    "csc = pz_server.combine_specz_catalogs(\"csc example\")"
    ]
   },
   {
@@ -923,10 +926,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#csc.append_catalog('zcosmos')\n",
-    "#csc.append_catalog('gama')\n",
-    "#csc.append_catalog('2dflens')\n",
-    "#csc.append_catalog('xxxx')"
+    "csc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csc.check_status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csc.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, add at least two individual spec-z catalogs to be included in the sample using the `append_catalog` method. These catalogs must already exist in the PZ Server, and their internal names identify them. For instance: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#csc.append_catalog('213_ztrue_tract_4029')\n",
+    "#csc.append_catalog('211_ztrue_tract_3831')\n",
+    "#csc.append_catalog('210_ztrue_tract_4031')\n",
+    "#csc.append_catalog('209_ztrue_tract_3448')\n",
+    "#csc.append_catalog('208_ztrue_tract_3450')\n",
+    "#csc.append_catalog('207_ztrue_tract_3833')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#csc.append_catalog('51_zcosmos_public_specz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#csc.append_catalog('14_gama_specz_subsample')\n",
+    "#csc.append_catalog('13_vvds_specz_subsample') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#csc.append_catalog('41_deimos_10k_public_specz´) \n",
+    "#csc.append_catalog('42_3dhst_public_specz´) \n",
+    "#csc.append_catalog('52_2dflens_public_specz')  \n",
+    "#csc.append_catalog('45_gama_public_specz´) "
    ]
   },
   {
@@ -942,7 +1033,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#csc.summary()"
+    "csc.summary()"
    ]
   },
   {
@@ -978,6 +1069,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-03T22:31:32.011908Z",
+     "iopub.status.busy": "2025-01-03T22:31:32.011142Z",
+     "iopub.status.idle": "2025-01-03T22:31:32.133447Z",
+     "shell.execute_reply": "2025-01-03T22:31:32.132498Z",
+     "shell.execute_reply.started": "2025-01-03T22:31:32.011880Z"
+    }
+   },
+   "source": [
+    "<font color=red>TO DO: GET NEW PRODUCT INTERNAL NAME FROM THE CSC OBJECT</font>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -999,7 +1105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# my_new_specz_catalog = pz_server.get_product(catalog_name)"
+    "my_new_specz_catalog = pz_server.get_product(catalog_name)"
    ]
   },
   {
@@ -1028,10 +1134,17 @@
     "\n",
     "On the PZ Server website, go to PZ Server Pipelines > Training Set Maker, fill in the submission form with relevant metadata, such as the name for the new training set to be created and a short description, select the input data and configuration parameters, and press the Run button. For this pipeline, the number of inputs is fixed to two: one spec-z catalog and one LSST Object catalog (identified by the LSST data release tag). \n",
     "\n",
-    "<font color=red> SCREENSHOT HERE</font>\n",
+    "<font color=red>TO DO: UPDATE SCREENSHOT HERE</font>\n",
     "\n",
     "\n",
-    "Alternatively, the pipeline can be submitted using the method `pz_server.make_training_set`.\n",
+    "<img src=\"./images/ScreenshotTSM.png\" align=\"top\"/> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, the pipeline can be submitted using the method `pz_server.make_training_set` from the `pzserver` library.\n",
     "\n",
     "While waiting for the first LSST Object catalog with observed data becoming available, let's see how the *Training Set Maker* works with simulated data from DP0.2. Again, let's instantiate an object for the process, a \"tsm\" object, giving a name (string) for the new training set to be created. "
    ]
@@ -1105,6 +1218,57 @@
    "outputs": [],
    "source": [
     "#tsm.run()  # or wait_processing(tsm) in PzServer class         \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Aqui tem informações de como iniciar um processo (combine_specz_catalogs e make_training_set):\n",
+    "https://linea-it.github.io/pzserver/autoapi/pzserver/core/index.html\n",
+    "\n",
+    "Aqui tem informações sobre as classes de processos (TSMProcess e CSCProcess):\n",
+    "https://linea-it.github.io/pzserver/autoapi/pzserver/process/index.html\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-03T15:36:24.456692Z",
+     "iopub.status.busy": "2025-01-03T15:36:24.456378Z",
+     "iopub.status.idle": "2025-01-03T15:36:24.462053Z",
+     "shell.execute_reply": "2025-01-03T15:36:24.461065Z",
+     "shell.execute_reply.started": "2025-01-03T15:36:24.456668Z"
+    }
+   },
+   "source": [
+    "https://dp0-2.lsst.io/data-products-dp0-2/index.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-03T15:38:18.101784Z",
+     "iopub.status.busy": "2025-01-03T15:38:18.101378Z",
+     "iopub.status.idle": "2025-01-03T15:38:18.107064Z",
+     "shell.execute_reply": "2025-01-03T15:38:18.106024Z",
+     "shell.execute_reply.started": "2025-01-03T15:38:18.101751Z"
+    }
+   },
+   "source": [
+    "<img src='./images/dpdd_dc2_zoom.png'/>"
    ]
   },
   {
