instructions for pipeline TSM

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -371,7 +371,7 @@
    },
    "outputs": [],
    "source": [
-    "search_results = pz_server.get_products_list(filters={\"product_type\": \"results\"}) \n",
+    "search_results = pz_server.get_products_list(filters={\"product_type\": \"training results\"}) \n",
     "search_results"
    ]
   },
@@ -488,16 +488,18 @@
     "\n",
     "All data products uploaded to the PZ Server are immediately available and visible to all PZ Server users (people with RSP credentials) through the PZ Server website or Python library. One way to share a data product is by providing the product's URL, which leads to the product's download page. The URL is composed by the PZ Server website address + **/products/** + **internal_name**:\n",
     "\n",
+    "https://pz-server.linea.org.br/product/ + **id**\n",
+    "\n",
+    "or \n",
+    "\n",
     "https://pz-server.linea.org.br/product/ + **internal_name** \n",
     "\n",
-    "or, if still in the development phase, \n",
+    "<font color=green> WARNING: if still in the development phase, the URL works only with the **complete internal name**: </font> \n",
     "\n",
-    "https://pz-server-dev.linea.org.br/product/ + **internal_name**\n",
-    "\n",
-    "<font color=green> WARNING: The URL works only with the **complete internal name**, not with just the **id** number. </font>\n",
+    "https://pz-server<font color=red>-dev</font>.linea.org.br/product/ + **internal_name**\n",
     "\n",
     "\n",
-    "For example:"
+    "For example, for the data just uploaded above:"
    ]
   },
   {
@@ -506,8 +508,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = f'https://pz-server-dev.linea.org.br/product/{product_id}_example_upload_via_lib'\n",
-    "url "
+    "internal_name = pz_server.get_product_metadata(product_id)['internal_name']\n",
+    "url = f'https://pz-server-dev.linea.org.br/product/{internal_name}'\n",
+    "url"
    ]
   },
   {
@@ -899,7 +902,7 @@
     "\n",
     "<font color=red>TO DO: UPDATE SCREENSHOT HERE</font>\n",
     "\n",
-    "<img src=\"./images/ScreenshotCSC.png\" align=\"top\"/> \n"
+    "<img src=\"./images/ScreenshotCSC.png\"  width=600/> \n"
    ]
   },
   {
@@ -917,6 +920,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#csc = pz_server.combine_specz_catalogs(<new product's name>)\n",
     "csc = pz_server.combine_specz_catalogs(\"csc example\")"
    ]
   },
@@ -926,7 +930,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csc"
+    "type(csc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check status of the `csc` process "
    ]
   },
   {
@@ -951,80 +962,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, add at least two individual spec-z catalogs to be included in the sample using the `append_catalog` method. These catalogs must already exist in the PZ Server, and their internal names identify them. For instance: "
+    "Then, add at least two individual spec-z catalogs to be included in the sample using the `append_catalog` method. These catalogs must already exist in the PZ Server, and their internal names identify them. Let's browse the spec-z catalogs available and choose from the list: "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "#csc.append_catalog('213_ztrue_tract_4029')\n",
-    "#csc.append_catalog('211_ztrue_tract_3831')\n",
-    "#csc.append_catalog('210_ztrue_tract_4031')\n",
-    "#csc.append_catalog('209_ztrue_tract_3448')\n",
-    "#csc.append_catalog('208_ztrue_tract_3450')\n",
-    "#csc.append_catalog('207_ztrue_tract_3833')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#csc.append_catalog('51_zcosmos_public_specz')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#csc.append_catalog('14_gama_specz_subsample')\n",
-    "#csc.append_catalog('13_vvds_specz_subsample') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#csc.append_catalog('41_deimos_10k_public_specz´) \n",
-    "#csc.append_catalog('42_3dhst_public_specz´) \n",
-    "#csc.append_catalog('52_2dflens_public_specz')  \n",
-    "#csc.append_catalog('45_gama_public_specz´) "
+    "pz_server.display_products_list(filters={\"product_type\": \"Spec-z Catalog\"})"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the summary of `csc` attributes. "
+    "Let's add those six small samples extracted from DP0.2 central tracts arbitrarily selected. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-03T15:38:18.101784Z",
+     "iopub.status.busy": "2025-01-03T15:38:18.101378Z",
+     "iopub.status.idle": "2025-01-03T15:38:18.107064Z",
+     "shell.execute_reply": "2025-01-03T15:38:18.106024Z",
+     "shell.execute_reply.started": "2025-01-03T15:38:18.101751Z"
+    }
+   },
+   "source": [
+    "<img src='./images/dpdd_dc2_zoom.png'/>\n",
+    "\n",
+    "Figure from: https://dp0-2.lsst.io/data-products-dp0-2/index.html "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# csc = append_catalog(specz_id=None, internal_name=None)\n",
+    "csc.append_catalog(213) # tract 4029\n",
+    "csc.append_catalog(211) # tract 3831\n",
+    "csc.append_catalog(210) # tract 4031\n",
+    "csc.append_catalog(209) # tract 3448\n",
+    "csc.append_catalog(208) # tract 3450\n",
+    "csc.append_catalog(207) # tract 3833"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When data observed with the LSST Camera become available, compilations of real data will be useful, for instance: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# csc.append_catalog('13_vvds_specz_subsample') \n",
+    "# csc.append_catalog('41_deimos_10k_public_specz') \n",
+    "# csc.append_catalog('42_3dhst_public_specz') \n",
+    "# csc.append_catalog('45_gama_public_specz') \n",
+    "# csc.append_catalog('51_zcosmos_public_specz')\n",
+    "# csc.append_catalog('52_2dflens_public_specz')   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But for now, let's stick with the mock data from DP0.2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check the summary of `csc` attributes, now updated with the input catalogs added above:  "
    ]
   },
   {
@@ -1049,38 +1072,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# csc.run()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check the process status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#csc.summary()"
+    "csc.run()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-03T22:31:32.011908Z",
-     "iopub.status.busy": "2025-01-03T22:31:32.011142Z",
-     "iopub.status.idle": "2025-01-03T22:31:32.133447Z",
-     "shell.execute_reply": "2025-01-03T22:31:32.132498Z",
-     "shell.execute_reply.started": "2025-01-03T22:31:32.011880Z"
+     "iopub.execute_input": "2025-01-07T20:21:59.499157Z",
+     "iopub.status.busy": "2025-01-07T20:21:59.498615Z",
+     "iopub.status.idle": "2025-01-07T20:21:59.595637Z",
+     "shell.execute_reply": "2025-01-07T20:21:59.594385Z",
+     "shell.execute_reply.started": "2025-01-07T20:21:59.499110Z"
     }
    },
    "source": [
-    "<font color=red>TO DO: GET NEW PRODUCT INTERNAL NAME FROM THE CSC OBJECT</font>\n"
+    "Still during the process, we can check the `id` and the `internal_name` of the output data product with the `summary` method. "
    ]
   },
   {
@@ -1089,14 +1096,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalog_name = "
+    "csc.summary()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When it is finished, the new spec-z catalog name as \"csc example\" will be available for download or to be loaded directly as a dataframe. "
+    "Or get it from the object `csc`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog_id = csc.output.get('id') \n",
+    "catalog_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog_name = csc.output.get('internal_name') \n",
+    "catalog_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check if the process is done, if the status is 'Successful', we can move on to the next cell. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csc.check_status()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, the new spec-z catalog named as \"csc example\" is available to be downloaded or retrieved to memory: "
    ]
   },
   {
@@ -1127,17 +1177,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "my_new_specz_catalog.data.plot(x=\"ra_specz\", y=\"dec_specz\", kind=\"scatter\")  \n",
+    "plt.xlabel(\"R.A. (degrees)\")\n",
+    "plt.ylabel(\"Dec. (degrees)\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Training Set Maker \n",
     "\n",
-    "On the PZ Server website, go to PZ Server Pipelines > Training Set Maker, fill in the submission form with relevant metadata, such as the name for the new training set to be created and a short description, select the input data and configuration parameters, and press the Run button. For this pipeline, the number of inputs is fixed to two: one spec-z catalog and one LSST Object catalog (identified by the LSST data release tag). \n",
+    "Now, let's add photometric data to our spectroscopic catalog to make a training set. On the PZ Server website, go to PZ Server Pipelines > Training Set Maker, fill in the submission form with relevant metadata, such as the name for the new training set to be created and a short description, select the input data and configuration parameters, and press the Run button. \n",
+    "\n",
+    "The configuration parameters are inherited from LSDB. For more information, please check the [LSDB documentation website](https://docs.lsdb.io/en/stable/).  \n",
+    "\n",
+    "\n",
+    "For this pipeline, the number of inputs is fixed to two: one spec-z catalog and one LSST Object catalog (identified by the LSST data release tag). \n",
     "\n",
     "<font color=red>TO DO: UPDATE SCREENSHOT HERE</font>\n",
     "\n",
-    "\n",
-    "<img src=\"./images/ScreenshotTSM.png\" align=\"top\"/> "
+    "<img src=\"./images/ScreenshotTSM.png\" /> "
    ]
   },
   {
@@ -1155,14 +1222,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tsm = pz.make_training_set(\"TSM example\")                         "
+    "tsm = pz_server.make_training_set(\"tsm example\")                          "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "They are provided by `set_specz` and `set_release` methods, respectively. "
+    "Let's set our spec-z catalog created above as input data: "
    ]
   },
   {
@@ -1171,8 +1238,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tsm.set_specz(specz_id=121)                                    \n",
-    "#tsm.set_release(release_id=4) "
+    "# tsm.set_specz(specz_id=None, internal_name=None)\n",
+    "tsm.set_specz(catalog_id)                                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tsm.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-07T20:57:41.713342Z",
+     "iopub.status.busy": "2025-01-07T20:57:41.712591Z",
+     "iopub.status.idle": "2025-01-07T20:57:41.745481Z",
+     "shell.execute_reply": "2025-01-07T20:57:41.744400Z",
+     "shell.execute_reply.started": "2025-01-07T20:57:41.713316Z"
+    }
+   },
+   "source": [
+    "And the data release for the object catalog. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tsm.set_release(name='dp02')        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tsm.summary()"
    ]
   },
   {
@@ -1181,18 +1290,16 @@
    "source": [
     "Set the cross-matching configuration parameters to be used by LSDB. \n",
     "\n",
-    "suffixes (Tuple[str, str]) – A pair of suffixes to be appended to the end of each column name when they are joined. Default: uses the name of the catalog for the suffix\n",
-    "\n",
     "```python\n",
-    "tsm.set_config(                                                \n",
-    "    {                                                          \n",
-    "        \"suffixes\": [\"_specz\", \"_dataset\"],                    \n",
-    "        \"n_neighbors\": 1,                                      \n",
-    "        \"radius_arcsec\": 2,                                    \n",
-    "        \"output_catalog_name\": \"tsm_cross_002\",                \n",
-    "    }                                                          \n",
+    "tsm.set_config(                                             \n",
+    "{'crossmatch': {'n_neighbors': 1, 'radius_arcsec': 1.0, 'output_catalog_name': 'tsm_cross_001'}, 'duplicate_criteria': 'closest'}                        \n",
     ")    \n",
-    "```"
+    "```\n",
+    "\n",
+    "From LSDB: \n",
+    "Suffixes (Tuple[str, str]) – A pair of suffixes to be appended to the end of each column name when they are joined. Default: uses the name of the catalog for the suffix\n",
+    "\n",
+    "When using the pipeline Training Set Maker, suffixes are added only if column names are equal on both sides.    "
    ]
   },
   {
@@ -1205,33 +1312,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "#tsm.run()  # or wait_processing(tsm) in PzServer class         \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Aqui tem informações de como iniciar um processo (combine_specz_catalogs e make_training_set):\n",
-    "https://linea-it.github.io/pzserver/autoapi/pzserver/core/index.html\n",
+    "This pipeline might take longer than the previous one, so letting the notebook cell run until the process is finished is convenient instead of checking the status once in a while. For that, use the method `run_and_wait()`. \n",
     "\n",
-    "Aqui tem informações sobre as classes de processos (TSMProcess e CSCProcess):\n",
-    "https://linea-it.github.io/pzserver/autoapi/pzserver/process/index.html\n",
-    "\n"
+    "OBS: the method `run_and_wait()` works if the process is shorter than 30 minutes. If it takes longer, the notebook cell is released and the process switches to the asynchronous mode.     "
    ]
   },
   {
@@ -1239,36 +1325,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-01-03T15:36:24.456692Z",
-     "iopub.status.busy": "2025-01-03T15:36:24.456378Z",
-     "iopub.status.idle": "2025-01-03T15:36:24.462053Z",
-     "shell.execute_reply": "2025-01-03T15:36:24.461065Z",
-     "shell.execute_reply.started": "2025-01-03T15:36:24.456668Z"
-    }
-   },
    "source": [
-    "https://dp0-2.lsst.io/data-products-dp0-2/index.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-01-03T15:38:18.101784Z",
-     "iopub.status.busy": "2025-01-03T15:38:18.101378Z",
-     "iopub.status.idle": "2025-01-03T15:38:18.107064Z",
-     "shell.execute_reply": "2025-01-03T15:38:18.106024Z",
-     "shell.execute_reply.started": "2025-01-03T15:38:18.101751Z"
-    }
-   },
-   "source": [
-    "<img src='./images/dpdd_dc2_zoom.png'/>"
+    "tsm.run_and_wait()"
    ]
   },
   {
@@ -1276,7 +1334,78 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tsm.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_set_id = tsm.output.get('id') \n",
+    "training_set_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, the new training set named as \"tsm example\" is available to be downloaded or retrieved to memory: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_new_training_set = pz_server.get_product(training_set_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_new_training_set.display_metadata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_new_training_set.data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "my_new_training_set.data.plot(x=\"ra_specz\", y=\"dec_specz\", kind=\"scatter\")  \n",
+    "plt.xlabel(\"R.A. (degrees)\")\n",
+    "plt.ylabel(\"Dec. (degrees)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_new_training_set.data.hist('Z')\n",
+    "plt.xlabel(\"spec-z\")\n",
+    "plt.ylabel(\"counts\")\n",
+    "plt.title(None)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1288,13 +1417,6 @@
     "\n",
     "Is something important missing? Send your feedback to us or [open an issue in the PZ Server library repository on GitHub](https://github.com/linea-it/pzserver/issues/new).  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
