add info about TSM config params

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -1292,14 +1292,12 @@
     "\n",
     "```python\n",
     "tsm.set_config(                                             \n",
-    "{'crossmatch': {'n_neighbors': 1, 'radius_arcsec': 1.0, 'output_catalog_name': 'tsm_cross_001'}, 'duplicate_criteria': 'closest'}                        \n",
+    "{'crossmatch': {'n_neighbors': 1, 'radius_arcsec': 1.0}, 'duplicate_criteria': 'closest', 'suffixes': ['','']}, 'duplicate_criteria': 'closest'}\n",
+    "\n",
+    "    \n",
     ")    \n",
     "```\n",
-    "\n",
-    "From LSDB: \n",
-    "Suffixes (Tuple[str, str]) – A pair of suffixes to be appended to the end of each column name when they are joined. Default: uses the name of the catalog for the suffix\n",
-    "\n",
-    "When using the pipeline Training Set Maker, suffixes are added only if column names are equal on both sides.    "
+    "\n"
    ]
   },
   {
